# rag

./: .gitignore  README.md  pyproject.toml
llm_rag_tutorial/: .incomplete_env  README.md  docker-compose.yml  main.py  pyproject.toml
llm_rag_tutorial/chatbot_api/: Dockerfile  pyproject.toml  requirements.txt
llm_rag_tutorial/chatbot_api/src/: entrypoint.sh  main.py
llm_rag_tutorial/chatbot_api/src/agents/: hospital_rag_agent.py
llm_rag_tutorial/chatbot_api/src/chains/: hospital_cypher_chain.py  hospital_review_chain.py
llm_rag_tutorial/chatbot_api/src/tools/: wait_times.py
llm_rag_tutorial/chatbot_api/src/utils/: IGNORE async_utils.py  constants.py
llm_rag_tutorial/chatbot_frontend/: Dockerfile  pyproject.toml  requirements.txt
llm_rag_tutorial/chatbot_frontend/src/: entrypoint.sh  main.py
llm_rag_tutorial/hospital_neo4j_etl/: Dockerfile  main.py  pyproject.toml  requirements.txt
llm_rag_tutorial/hospital_neo4j_etl/src/: hospital_bulk_csv_write.py
llm_rag_tutorial/langchain_intro/: chatbot.py  constants.py  create_retriever.py  invoke_agent_with_tool_call.py  invoke_rag.py  tools.py
llm_rag_tutorial/tests/: async_agent_requests.py  sync_agent_requests.py
notebooks/: FunctionCallingWithLocalModels.ipynb  RAG.ipynb  Speech2Text_ASR.ipynb  Whisper_ASR.ipynb
