[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyterlab = "^4.2.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
torch = "^2.3.0"
transformers = {extras = ["torch"], version = "^4.40.2"}
datasets = {extras = ["audio"], version = "^2.19.1"}
torchaudio = "^2.3.0"
sentencepiece = "^0.2.0"
librosa = "^0.10.2.post1"
accelerate = "^0.30.1"
black = "^24.4.2"
langchain-community = "^0.2.3"
chromadb = "^0.5.0"
langchain = "^0.2.2"
sentence-transformers = "^3.0.0"
langchain-huggingface = "^0.0.3"
tiktoken = "^0.7.0"
langchain-nomic = "^0.1.2"
einops = "^0.8.0"
langchainhub = "^0.1.18"
langchain-experimental = "^0.0.61"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
